# FastAPI_CICD_S1

./: Dockerfile  README.md  pyproject.toml  requirements.txt  test_api.py
.github/workflows/: build-and-push.yml  main.yml  test-and-lint.yml
app/: main.py  test_api.py
